fix align card

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   width: 100%;
   max-width: 1400px;
-  margin: auto;
+  /* margin: auto; */
 }
 
 * {
@@ -38,14 +38,14 @@ a {
   color: #0065fc;
 }
 
-aside {
+/* aside {
   width: 30%;
   height: 668px;
-}
+} */
 
 footer {
   width: 100%;
-  height: 200px;
+  /* height: 200px; */
 }
 
 /*HEADER*/
@@ -100,7 +100,6 @@ footer {
 .texte_entete {
   padding: 0 0 0 55px;
 }
-
 
 /*BLOC RECHERCHE*/
 
@@ -170,7 +169,6 @@ input::placeholder {
   border-radius: 30px;
   align-items: center;
   padding: 5px;
-
 }
 
 .bouton_filtres:hover {
@@ -195,7 +193,7 @@ input::placeholder {
 
 .boite_heb_pop {
   justify-content: space-evenly;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .texte_prix {
@@ -203,7 +201,7 @@ input::placeholder {
   padding-left: 15px;
 }
 
-.ligne_etoiles{
+.ligne_etoiles {
   padding-left: 15px;
 }
 
@@ -234,21 +232,45 @@ input::placeholder {
   padding: 20px 10px 0 10px;
   gap: 20px;
 }
-
+.carte_hebergements_img_ctn {
+  width: 100%;
+}
 .carte_hebergements {
   background-color: white;
   border-radius: 20px;
-  padding: 5px;
+  width: calc(33% - 20px);/* 20px == le gap du parent*/
+  /* padding: 5px; */
   box-shadow: rgba(0, 0, 0, 0.15) 0 5px 6px;
 }
+.carte_hebergements_content {
+  padding: 5px;
+}
+.carte_content_hoz {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
 
+.carte_content_hoz .carte_hebergements_img_ctn {
+  width: 40%;
+}
+.carte_content_hoz .contenu_texte_hebergements {
+  width: 60%;
+
+}
+.carte_content_hoz .image_hebergements {
+  border-radius: 20px 0 0 20px;
+}
 .image_hebergements {
-  width: 246px;
-  height: 124px;
+  width: 100%;
+  max-height: 180px;
+  object-fit: cover;
+  /* width: 246px;
+  height: 124px; */
   border-radius: 20px 20px 0px 0px;
 }
 
-.contenu_texte_hebergements{
+.contenu_texte_hebergements {
   padding-bottom: 5px;
 }
 
@@ -376,8 +398,7 @@ input::placeholder {
 
 /*MEDIA QUERIES*/
 
-@media screen and (min-width: 992px){
-
+@media screen and (min-width: 992px) {
   .fa-magnifying-glass {
     display: none;
   }
@@ -386,7 +407,7 @@ input::placeholder {
 /*SMARTPHONES*/
 
 @media (max-width: 768px) {
-    /*body{
+  /*body{
         background-color: greenyellow;
     }*/
   .header .main .boite_hebergements .boite_activites {
@@ -397,7 +418,7 @@ input::placeholder {
     flex-flow: column nowrap;
   } */
 
-  .texte_bouton_recherche{
+  .texte_bouton_recherche {
     display: none;
   }
 
@@ -412,11 +433,10 @@ input::placeholder {
     padding-left: 10px;
   }
 
-
   .boite_boutons {
     flex-wrap: wrap;
-   justify-content: space-between;
-   gap: 10px;
+    justify-content: space-between;
+    gap: 10px;
   }
 
   .texte_x_dispo {
@@ -443,11 +463,11 @@ input::placeholder {
     justify-content: center;
   }
 
-.boite_activites {
-width: 100%;
-flex-flow: column nowrap;
-justify-content: center;
-}
+  .boite_activites {
+    width: 100%;
+    flex-flow: column nowrap;
+    justify-content: center;
+  }
 
   .sous_boite_activites {
     width: 100%;
